src/definitions/collections/menu.less
/* ... */
/* Vertical Right Tabular */
.ui.vertical.right.tabular.menu {
  background: @tabularVerticalBackground;
  border-radius: 0;
  box-shadow: none !important;
  border-bottom: none;
  border-right: none;
  border-left: @tabularBorderWidth solid @tabularBorderColor;
}
.ui.vertical.right.tabular.menu .item {
  background: none;
  border-right: @tabularBorderWidth solid transparent;
  border-bottom: @tabularBorderWidth solid transparent;
  border-top: @tabularBorderWidth solid transparent;
  border-left: none;
}
.ui.vertical.right.tabular.menu .active.item {
  background: @tabularActiveBackground;
  color: @tabularActiveColor;
  border-color: @tabularBorderColor;
  margin: 0 0 0 -@tabularBorderWidth;
  border-radius: 0 @tabularBorderRadius @tabularBorderRadius 0 !important;
}

/* Dropdown */
.ui.tabular.menu .active.dropdown.item {
  margin-bottom: 0;
  border-left: @tabularBorderWidth solid transparent;
  border-right: @tabularBorderWidth solid transparent;
  border-top: @tabularOppositeBorderWidth solid transparent;
  border-bottom: none;
}



/*--------------
   Pagination
---------------*/

.ui.pagination.menu {
  margin: 0;
  display: inline-flex;
  vertical-align: middle;
}
.ui.pagination.menu .item:last-child {
  border-radius: 0 @borderRadius @borderRadius 0;
}
.ui.compact.menu .item:last-child {
  border-radius: 0 @borderRadius @borderRadius 0;
}
.ui.pagination.menu .item:last-child:before {
  display: none;
}

.ui.pagination.menu .item {
  min-width: @paginationMinWidth;
  text-align: center;
}
.ui.pagination.menu .icon.item i.icon {
  vertical-align: top;
}

/* Active */
.ui.pagination.menu .active.item {
  border-top: none;
  padding-top: @itemVerticalPadding;
  background-color: @paginationActiveBackground;
  color: @paginationActiveTextColor;
  box-shadow: none;
}

/*--------------
   Secondary
---------------*/

.ui.secondary.menu {
  background: @secondaryBackground;
  margin-left: -@secondaryItemSpacing;
  margin-right: -@secondaryItemSpacing;
  border-radius: 0;
  border: none;
  box-shadow: none;
}

/* Item */
.ui.secondary.menu .item {
  align-self: center;
  box-shadow: none;
  border: none;
  padding: @secondaryItemPadding;
  margin: @secondaryItemMargin;
  background: @secondaryItemBackground;
  transition: @secondaryItemTransition;
  border-radius: @secondaryItemBorderRadius;
}

/* No Divider */
.ui.secondary.menu .item:before {
  display: none !important;
}

/* Header */
.ui.secondary.menu .header.item {
  border-radius: 0;
  border-right: @secondaryHeaderBorder;
  background: @secondaryHeaderBackground;
}

/* Image */
.ui.secondary.menu .item > img:not(.ui) {
  margin: 0;
}

/* Hover */
.ui.secondary.menu .dropdown.item:hover,
.ui.secondary.menu .link.item:hover,
.ui.secondary.menu a.item:hover {
  background: @secondaryHoverItemBackground;
  color: @secondaryHoverItemColor;
}

/* Active */
.ui.secondary.menu .active.item {
  box-shadow: none;
  background: @secondaryActiveItemBackground;
  color: @secondaryActiveItemColor;
  border-radius: @secondaryItemBorderRadius;
}

/* Active Hover */
.ui.secondary.menu .active.item:hover {
  box-shadow: none;
  background: @secondaryActiveHoverItemBackground;
  color: @secondaryActiveHoverItemColor;
}


/* Inverted */
.ui.secondary.inverted.menu .link.item:not(.disabled),
.ui.secondary.inverted.menu a.item:not(.disabled) {
  color: @secondaryInvertedColor;
}
.ui.secondary.inverted.menu .dropdown.item:hover,
.ui.secondary.inverted.menu .link.item:hover,
.ui.secondary.inverted.menu a.item:hover {
  background: @secondaryInvertedHoverBackground;
  color: @secondaryInvertedHoverColor;
}
.ui.secondary.inverted.menu .active.item {
  background: @secondaryInvertedActiveBackground;
  color: @secondaryInvertedActiveColor;
}

/* Fix item margins */
.ui.secondary.item.menu {
  margin-left: 0;
  margin-right: 0;
}
.ui.secondary.item.menu .item:last-child {
  margin-right: 0;
}
.ui.secondary.attached.menu {
  box-shadow: none;
}

/* Sub Menu */
.ui.vertical.secondary.menu .item:not(.dropdown) > .menu {
  margin: @secondaryMenuSubMenuMargin;
}
.ui.vertical.secondary.menu .item:not(.dropdown) > .menu > .item {
  margin: @secondaryMenuSubMenuItemMargin;
  padding: @secondaryMenuSubMenuItemPadding;
}


/*---------------------
   Secondary Vertical
-----------------------*/

.ui.secondary.vertical.menu > .item {
  border: none;
  margin: @secondaryVerticalItemMargin;
  border-radius: @secondaryVerticalItemBorderRadius !important;
}
.ui.secondary.vertical.menu > .header.item {
  border-radius: 0;
}

/* Sub Menu */
.ui.vertical.secondary.menu .item > .menu .item {
  background-color: transparent;
}

/* Inverted */
.ui.secondary.inverted.menu.menu {
  background-color: transparent;
}

/*---------------------
   Secondary Pointing
-----------------------*/

.ui.secondary.pointing.menu {
  margin-left: 0;
  margin-right: 0;
  border-bottom: @secondaryPointingBorderWidth solid @secondaryPointingBorderColor;
}

.ui.secondary.pointing.menu .item {
  border-bottom-color: transparent;
  border-bottom-style: solid;
  border-radius: 0;
  align-self: flex-end;

  margin: 0 0 -@secondaryPointingBorderWidth;
  padding: @secondaryPointingItemVerticalPadding @secondaryPointingItemHorizontalPadding;
  border-bottom-width: @secondaryPointingBorderWidth;
  transition: @secondaryItemTransition;
}
.ui.secondary.pointing.menu .ui.dropdown .menu .item {
  border-bottom-width: 0;
}

/* Item Types */
.ui.secondary.pointing.menu .header.item {
  color: @secondaryPointingHeaderColor !important;
}
.ui.secondary.pointing.menu .text.item {
  box-shadow: none !important;
}
.ui.secondary.pointing.menu .item:after {
  display: none;
}

/* Hover */
.ui.secondary.pointing.menu .dropdown.item:hover,
.ui.secondary.pointing.menu .link.item:hover,
.ui.secondary.pointing.menu a.item:hover {
  background-color: transparent;
  color: @secondaryPointingHoverTextColor;
}
/* ... */

